# misp-mcp

./: .env.example  .gitignore  README.md  pyproject.toml  run_server.sh
app/: config.py  server.py
app/misp/: client.py
app/resources/: events.py  feeds.py
app/tools/: attributes.py  connection.py  events.py
src/: server.py
src/misp/: client.py
src/resources/: events.py
src/tools/: attributes.py  connection.py  events.py
